[gd_scene load_steps=32 format=2]

[ext_resource path="res://sprites/Big Monster/idle.png" type="Texture" id=1]
[ext_resource path="res://scripts/Boss.gd" type="Script" id=2]
[ext_resource path="res://sprites/Big Monster/attack 1t.png" type="Texture" id=3]
[ext_resource path="res://Components/EnemyMovement.tscn" type="PackedScene" id=4]
[ext_resource path="res://Components/Health.tscn" type="PackedScene" id=5]
[ext_resource path="res://Components/FSM.tscn" type="PackedScene" id=6]
[ext_resource path="res://sprites/Big Monster/run.png" type="Texture" id=7]
[ext_resource path="res://sprites/Big Monster/attack 2t.png" type="Texture" id=8]
[ext_resource path="res://Interface/fill.png" type="Texture" id=9]
[ext_resource path="res://Interface/bg.png" type="Texture" id=10]
[ext_resource path="res://scripts/bossHealthbar.gd" type="Script" id=11]
[ext_resource path="res://sprites/Big Monster/Bidamaged and death.png" type="Texture" id=12]
[ext_resource path="res://rangedEnemy.tscn" type="PackedScene" id=13]
[ext_resource path="res://scenes/MoneyBag.tscn" type="PackedScene" id=14]
[ext_resource path="res://scripts/SoundEffects.gd" type="Script" id=15]
[ext_resource path="res://Music/slam.ogg" type="AudioStream" id=16]
[ext_resource path="res://Music/bossDeath.ogg" type="AudioStream" id=17]
[ext_resource path="res://Music/youSuck.ogg" type="AudioStream" id=18]
[ext_resource path="res://Music/bossDamage.ogg" type="AudioStream" id=19]


[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 30, 39.3333 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 36.6667, 7.33333 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 44, 19.3333 )

[sub_resource type="Animation" id=4]
resource_name = "attack1fake"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("runningSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("idleSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("attack1sprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("attack1sprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("attack1sprite/hitbox/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("attack2Sprite:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("deathSprite:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("attack2Sprite/hitbox2/CollisionShape2D:disabled")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=5]
resource_name = "attack1fake"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("runningSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("idleSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("attack1sprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("attack1sprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("attack2Sprite:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("deathSprite:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("attack2Sprite/hitbox2/CollisionShape2D:disabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=6]
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath("attack1sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("runningSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("idleSprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("attack2Sprite:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("attack2Sprite:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("attack2Sprite/hitbox2/CollisionShape2D:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("deathSprite:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=7]
resource_name = "attack2fake"
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath("attack1sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("runningSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("idleSprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("attack2Sprite:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("attack2Sprite:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("deathSprite:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=8]
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath("deathSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("deathSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("attack1sprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("attack2Sprite:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("runningSprite:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("idleSprite:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( -0.9, 0 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("HealthBar:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=9]
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("idleSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("runningSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("idleSprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("attack1sprite:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("attack2Sprite:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("deathSprite:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=10]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("runningSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("idleSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("runningSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("attack1sprite:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("attack2Sprite:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("deathSprite:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 18, 23 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 18, 10 )

[node name="Boss" type="KinematicBody2D"]
scale = Vector2( 1.5, 1.5 )
collision_layer = 8
script = ExtResource( 2 )
enableSummoning = false
summonMinion = ExtResource( 13 )
coin = ExtResource( 14 )

[node name="attackRange" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="attackRange"]
position = Vector2( -1.33333, -18 )
shape = SubResource( 1 )

[node name="deathSprite" type="Sprite" parent="."]
visible = false
texture = ExtResource( 12 )
offset = Vector2( 15, 0 )
vframes = 9

[node name="attack1sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )
offset = Vector2( 15, 0 )
vframes = 7

[node name="hitbox" type="Area2D" parent="attack1sprite"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="attack1sprite/hitbox"]
position = Vector2( 32.6667, 9.33333 )
shape = SubResource( 2 )
disabled = true

[node name="attack2Sprite" type="Sprite" parent="."]
visible = false
texture = ExtResource( 8 )
offset = Vector2( 15, 0 )
vframes = 9
frame = 5

[node name="hitbox2" type="Area2D" parent="attack2Sprite"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="attack2Sprite/hitbox2"]
position = Vector2( -0.666667, 3.33334 )
shape = SubResource( 3 )
disabled = true

[node name="runningSprite" type="Sprite" parent="."]
visible = false
texture = ExtResource( 7 )
offset = Vector2( 15, 0 )
vframes = 8

[node name="idleSprite" type="Sprite" parent="."]
visible = false
texture = ExtResource( 1 )
offset = Vector2( 15, 0 )
vframes = 6
frame = 3

[node name="Health" parent="." instance=ExtResource( 5 )]
maxHealth = 1000

[node name="FSM" parent="." instance=ExtResource( 6 )]

[node name="Movement" parent="." instance=ExtResource( 4 )]
maxHorizontalSpeed = 30

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/attack1 = SubResource( 4 )
anims/attack1fake = SubResource( 5 )
anims/attack2 = SubResource( 6 )
anims/attack2fake = SubResource( 7 )
anims/death = SubResource( 8 )
anims/idle = SubResource( 9 )
anims/running = SubResource( 10 )

[node name="hurtbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtbox"]
position = Vector2( -2, -1.33333 )
shape = SubResource( 11 )

[node name="Body" type="CollisionShape2D" parent="."]
position = Vector2( -2, 11.3333 )
shape = SubResource( 12 )

[node name="attackTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="damageTimer" type="Timer" parent="."]

[node name="HealthBar" type="Control" parent="."]
margin_left = -22.0
margin_top = -33.3333
margin_right = 18.0
margin_bottom = 6.66666
rect_scale = Vector2( 0.1, 0.1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureProgress" type="TextureProgress" parent="HealthBar"]
margin_right = 40.0
margin_bottom = 40.0
value = 100.0
texture_under = ExtResource( 10 )
texture_progress = ExtResource( 9 )
tint_under = Color( 0, 0, 0, 1 )
tint_progress = Color( 1, 0, 0, 1 )
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fakeAttackTimer" type="Timer" parent="."]
one_shot = true

[node name="fakeAttackTimer2" type="Timer" parent="."]
one_shot = true

[node name="summoningTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="coinTimer" type="Timer" parent="."]
one_shot = true

[node name="SoundEffects" type="Node2D" parent="."]
script = ExtResource( 15 )

[node name="death" type="AudioStreamPlayer2D" parent="SoundEffects"]
stream = ExtResource( 17 )
volume_db = -10.0
pitch_scale = 0.8

[node name="damage" type="AudioStreamPlayer2D" parent="SoundEffects"]
stream = ExtResource( 19 )
pitch_scale = 0.9

[node name="slam" type="AudioStreamPlayer2D" parent="SoundEffects"]
stream = ExtResource( 16 )

[node name="yousuck" type="AudioStreamPlayer2D" parent="SoundEffects"]
stream = ExtResource( 18 )
pitch_scale = 0.8

[node name="insultTimer" type="Timer" parent="."]
one_shot = true

[node name="slamTimer" type="Timer" parent="."]
one_shot = true
[connection signal="bossMaxHealth" from="." to="HealthBar/TextureProgress" method="_on_Boss_bossMaxHealth"]
[connection signal="healthChange" from="." to="HealthBar/TextureProgress" method="_on_Boss_healthChange"]
[connection signal="body_entered" from="attackRange" to="." method="_on_attackRange_body_entered"]
[connection signal="body_exited" from="attackRange" to="." method="_on_attackRange_body_exited"]
[connection signal="body_entered" from="attack1sprite/hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="body_entered" from="attack2Sprite/hitbox2" to="." method="_on_hitbox2_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="attackTimer" to="." method="_on_attackTimer_timeout"]
[connection signal="timeout" from="fakeAttackTimer" to="." method="_on_fakeAttackTimer_timeout"]
[connection signal="timeout" from="fakeAttackTimer2" to="." method="_on_fakeAttackTimer2_timeout"]
[connection signal="timeout" from="summoningTimer" to="." method="_on_summoningTimer_timeout"]
[connection signal="timeout" from="coinTimer" to="." method="_on_coinTimer_timeout"]
[connection signal="timeout" from="insultTimer" to="." method="_on_insultTimer_timeout"]
[connection signal="timeout" from="slamTimer" to="." method="_on_slamTimer_timeout"]
